fix(serve): improve UX on mobile devices

--- a/packages/akashic-cli-serve/src/client/view/atom/TopResizable.module.css
+++ b/packages/akashic-cli-serve/src/client/view/atom/TopResizable.module.css
@@ -14,6 +14,7 @@
 
 	background: rgba(255, 255, 255, 0.01);
 	cursor: ns-resize;
+	touch-action: none;
 }
 
 .h-resizer:active {
